style.css
        html {
            scroll-behavior: smooth;
        }
        
        body {
            background-color: rgb(255, 255, 255);
            font-family: 'Roboto', sans-serif;
        }
        
        .navbar.navbar-6 .navbar-toggler-icon {
            background-image: url('https://mdbootstrap.com/img/svg/hamburger8.svg?color=154C5B');
        }
        
        h1 {
            font-family: 'Abril Fatface', cursive;
            font-size: 100pt;
        }
        
        h2 {
            font-family: 'Roboto', sans-serif;
        }
        
        h3 {
            font-family: 'Abril Fatface', cursive;
            font-size: 50pt;
        }
        
        h4 {
            font-family: 'Roboto', sans-serif;
            font-size: 25pt;
            font-weight: lighter;
            color: black;
            letter-spacing: 3px;
            text-align: center;
        }
        
        h4:hover {
            color: #63b5a3;
            text-decoration-line: underline;
            text-decoration: black;
        }
        
        h5 {
            letter-spacing: 2px;
        }
        
        p {
            font-family: 'Roboto', sans-serif;
            font-size: 12pt;
            letter-spacing: 1pt;
            font-weight: 300;
        }
        
        hr {
            border-top: 2px solid;
        }
        
        .title {
            padding-bottom: 50pt;
            padding-top: 25pt;
            text-align: end;
        }
        /* unvisited link */
        
        a:link {
            color: black;
            text-decoration: none;
        }
        /* visited link */
        
        a:visited {
            color: black;
            text-decoration: none;
        }
        /* mouse over link */
        
        a:hover {
            color: #63b5a3;
        }
        /* selected link */
        
        a:active {
            color: black;
            text-decoration: none;
        }
        
        .logo-image {
            width: 300px;
            height: auto;
            align-self: center;
        }
        
        .container-2 {
            position: relative;
            text-align: center;
            background-image: url('images/group_photo.png');
            opacity: 100%;
            background-repeat: no-repeat;
            background-size: 100%;
            background-position: center;
            height: 500px;
        }
        
        .centered {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
        }
        
        .exhibition-img {
            width: 100%;
            height: 100%
        }
        
        .biotext {
            padding-bottom: 50pt;
        }
        
        .gallery {
            padding-top: 50pt;
            padding-bottom: 100px;
        }
        
        .piece_text {
            padding: 5pt;
        }
        /* MOBILE SCREENS */
        
        @media screen and (max-width: 450px) {
            .exhibition-img {
                display: none;
            }
            .biotext {
                padding-bottom: 0pt;
            }
            .gallery {
                padding-top: 10pt;
            }
            .piece_text {
                padding: 0pt;
                display: inline-flex;
            }
            .col-6 {
                flex: none;
                max-width: none;
                text-align: left;
                border-bottom: black;
                border-bottom-style: dashed;
                border-bottom-width: thin;
                padding: 15px;
            }
            .title_of_piece {
                padding-left: 15pt;
                text-align: right;
            }
            .logo-image {
                display: none;
            }
            .container-2 {
                height: 200px;
            }
        }
        
        @media screen and (max-width: 768px) and (min-width: 450px) {
            .biotext {
                padding-bottom: 0pt;
            }
            .gallery {
                padding-top: 10pt;
            }
            .container-2 {
                height: 250px;
            }
            .logo-image {
                display: none;
            }
            .sidebar {
                padding-top: 15px;
            }
            .sidebar a {
                font-size: 18px;
            }
            .title_of_piece {
                padding-left: 15pt;
                text-align: left;
                width: 100;
            }
        }
        
        .footer-bottom {
            padding: 0 0 60px 0;
        }
        
        .footer-social a {
            margin: 0 10px;
            color: #bbb;
            border: 0;
        }
        
        .footer-social a:hover,
        .footer-social a:focus {
            color: #000000;
            border: 0;
        }
        
        .footer-social i {
            font-size: 24px;
            vertical-align: middle;
        }
        
        #main {
            transition: margin-left .5s;
            padding: 16px;
        }

